2006-07-21  Scott Lembcke <lemb0029@gnome.org>

        * gimp-lib/rubyfu.rb: Removed some unnecesary code. Clicking 'cancel' in
          the dialog will now work correctly. Interactive procedures that take
          no parameters don't trigger the dialog.
          
        * ext/rbgimpdialog.c: Added a enumeration popup widget. show_dialog()
          now takes an extra parameter for the menu name. The procedure name
          is used as the help_id, and the menu name is used in the dialog title.
          Parameter names now have a ':' appended to their labels.
          
        * plug-ins/test.rb: Added the new parameter type.

2006-07-21  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: Changed spacing, padding and alignment of the
          widgets. Also fixed some memory leaks where the dialog was not
          destroyed, and collect_results() was not getting called to free
          parameter data.
        
        * plug-ins/test.rb: Filled in parameter descriptions for dialog
          functions.
          
2006-07-20  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: Even more parameter types added.
        
        * plug-ins/test.rb: Split the dialog test into two seperate procedures.
          Added the new parameter types to the tests.
          
        * gimp-lib/gimp.rb: Made Gimp.Color a module function so that it's
          available without including the Gimp module.
        
        * gimp-lib/gimp_oo.rb: Put ensure blocks on the paired procedures.
        
        * plug-ins/sphere.rb: Updated to use OO types and new parameter types.

2006-07-19  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: More parameter types added.
        
        * plug-ins/test.rb: Added more parameter types to the dialog test
          procedure.

2006-07-19  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: More parameter types added.
        