@@ -12,10 +12,10 @@ get_arr_size (const GimpParam *params,
               int              index)
 {
   const GimpParam *param = params + (index - 1);
-  
+
   if (index < 0 || param->type != GIMP_PDB_INT32)
     rb_raise(rb_eTypeError, "Size parameter not given for array %d.", index);
-    
+
   return param->data.d_int32;
 }
 
@@ -26,12 +26,12 @@ gimp_array2rb(const GimpParam *params,
   const GimpParam *param = &params[index];
   gint32 size = get_arr_size(params, index);
   volatile VALUE result = rb_ary_new();
-  
+
   gint32   *int32arr;
   gint16   *int16arr;
   gdouble  *floatarr;
   gchar   **stringarr;
-  
+
   int i;
   switch (param->type)
     {
@@ -40,29 +40,29 @@ gimp_array2rb(const GimpParam *params,
       for(i=0; i<size; i++)
         rb_ary_push(result, INT2NUM(int32arr[i]));
       break;
-    
+
     case GIMP_PDB_INT16ARRAY:
       int16arr = param->data.d_int16array;
       for(i=0; i<size; i++)
         rb_ary_push(result, INT2NUM(int16arr[i]));
       break;
-    
+
     case GIMP_PDB_FLOATARRAY:
       floatarr = param->data.d_floatarray;
       for(i=0; i<size; i++)
         rb_ary_push(result, rb_float_new(floatarr[i]));
       break;
-    
+
     case GIMP_PDB_STRINGARRAY:
       stringarr = param->data.d_stringarray;
       for(i=0; i<size; i++)
         rb_ary_push(result, rb_str_new2(stringarr[i]));
       break;
-    
+
     default:
       rb_bug("Bad type value in gimp_array2rb()");
     }
-    
+
   return result;
 }
 
@@ -72,9 +72,9 @@ int8array2str (const GimpParam *params,
 {
   gint32 size = get_arr_size(params, index);
   char *ptr = (char *)params[index].data.d_int8array;
-  
+
   return rb_str_new(ptr, size);
-} 
+}
 
 VALUE
 GimpParam2rb (const GimpParam *params,
@@ -83,25 +83,25 @@ GimpParam2rb (const GimpParam *params,
   const GimpParam *param = params + index;
   GimpPDBArgType type = param->type;
   volatile VALUE data;
-  
+
   switch (type)
     {
     case GIMP_PDB_INT32:
       data = INT2NUM(param->data.d_int32);
       break;
-      
+
     case GIMP_PDB_INT16:
       data = INT2NUM(param->data.d_int16);
       break;
-      
+
     case GIMP_PDB_INT8:
       data = INT2NUM(param->data.d_int8);
       break;
-      
+
     case GIMP_PDB_FLOAT:
       data = rb_float_new(param->data.d_float);
       break;
-      
+
     case GIMP_PDB_STRING:
       data = rb_str_new2(param->data.d_string);
       break;
@@ -128,43 +128,43 @@ GimpParam2rb (const GimpParam *params,
     case GIMP_PDB_DISPLAY:
       data = INT2NUM(param->data.d_display);
       break;
-      
+
     case GIMP_PDB_IMAGE:
       data = INT2NUM(param->data.d_image);
       break;
-      
+
     case GIMP_PDB_LAYER:
       data = INT2NUM(param->data.d_layer);
       break;
-      
+
 /*    case GIMP_PDB_LAYER_MASK:
       data = INT2NUM(param.data.d_layer_mask);
       break;*/
-      
+
     case GIMP_PDB_CHANNEL:
       data = INT2NUM(param->data.d_channel);
       break;
-      
+
     case GIMP_PDB_DRAWABLE:
       data = INT2NUM(param->data.d_drawable);
       break;
-      
+
     case GIMP_PDB_SELECTION:
       data = INT2NUM(param->data.d_selection);
       break;
-      
+
     case GIMP_PDB_BOUNDARY:
       data = INT2NUM(param->data.d_boundary);
       break;
-      
+
     case GIMP_PDB_VECTORS:
       data = INT2NUM(param->data.d_vectors);
       break;
-      
+
 /*    case GIMP_PDB_UNIT:
       data = INT2NUM(param.data.d_unit);
       break;*/
-      
+
     case GIMP_PDB_PARASITE:
       data = GimpParasite2rb(param->data.d_parasite);
       break;
@@ -172,29 +172,29 @@ GimpParam2rb (const GimpParam *params,
 /*   case GIMP_PDB_TATTOO:
      data = INT2NUM(param.data.d_tattoo);
      break;*/
-      
+
     case GIMP_PDB_STATUS:
       data = INT2NUM(param->data.d_status);
       break;
-    
+
     default:
       rb_bug("Parameter type %d does not exist.\n", param->type);
     }
-    
+
   return rb_struct_new(sGimpParam, INT2NUM(type), data);
 }
 
 VALUE
 GimpParams2rb (const GimpParam *params,
                int             count)
-{ 
+{
   volatile VALUE ary = rb_ary_new();
-  
+
 
   int i;
   for (i=0; i<count; i++)
     rb_ary_push(ary, GimpParam2rb(params, i));
-  
+
   return ary;
 }
 
@@ -205,7 +205,7 @@ rb2gimp_array (GimpPDBArgType type,
   rbarr = rb_check_array_type(rbarr);
   int count = RARRAY(rbarr)->len;
   VALUE *arr = RARRAY(rbarr)->ptr;
-  
+
   int i;
   gint32  *int32arr;
   gint16  *int16arr;
@@ -218,17 +218,17 @@ rb2gimp_array (GimpPDBArgType type,
       int32arr = g_new(gint32, count);
       for(i=0; i<count; i++) int32arr[i] = (gint32)NUM2INT(arr[i]);
       return int32arr;
-      
+
     case GIMP_PDB_INT16ARRAY:
       int16arr = g_new(gint16, count);
       for(i=0; i<count; i++) int16arr[i] = (gint16)NUM2INT(arr[i]);
       return int16arr;
-            
+
     case GIMP_PDB_FLOATARRAY:
       floatarr = g_new(gdouble, count);
       for(i=0; i<count; i++) floatarr[i] = (gdouble)NUM2DBL(arr[i]);
       return floatarr;
-      
+
     case GIMP_PDB_STRINGARRAY:
       stringarr = g_new(gchar *, count);
       for(i=0; i<count; i++) stringarr[i] = g_strdup(StringValuePtr(arr[i]));
@@ -243,7 +243,7 @@ str2gint8 (VALUE rb_str)
 {
   Check_Type(rb_str, T_STRING);
   struct RString *str = RSTRING(rb_str);
-  
+
   return g_memdup(str->ptr, str->len);
 }
 
@@ -255,24 +255,24 @@ rb2GimpParam (VALUE rbparam)
 
   int type = NUM2INT(rb_struct_aref(rbparam, ID2SYM(id_type)));
   VALUE rbdata = rb_struct_aref(rbparam, ID2SYM(id_data));
-  
+
   GimpParam result;
   result.type = (GimpPDBArgType)type;
-  
+
   switch (type)
     {
     case GIMP_PDB_INT32:
       result.data.d_int32 = (gint32)NUM2INT(rbdata);
       break;
-      
+
     case GIMP_PDB_INT16:
       result.data.d_int16 = (gint16)NUM2INT(rbdata);
       break;
-      
+
     case GIMP_PDB_INT8:
       result.data.d_int8 = (gint8)NUM2INT(rbdata);
       break;
-      
+
     case GIMP_PDB_FLOAT:
       result.data.d_float = (gdouble)NUM2DBL(rbdata);
       break;
@@ -357,7 +357,7 @@ rb2GimpParam (VALUE rbparam)
       result.data.d_status = (GimpPDBStatusType)NUM2INT(rbdata);
       break;
     }
-  
+
   return result;
 }
 
@@ -368,13 +368,13 @@ rb2GimpParams (VALUE rbparams,
   rbparams = rb_check_array_type(rbparams);
   int num = RARRAY(rbparams)->len;
   VALUE *arr = RARRAY(rbparams)->ptr;
-  
+
   GimpParam *params = g_new(GimpParam, num);
-  
+
   int i;
   for (i=0; i<num; i++)
     params[i] = rb2GimpParam(arr[i]);
-  
+
   *count = (gint)num;
   return params;
 }
@@ -385,7 +385,7 @@ GimpParamDef2rb (GimpParamDef paramdef)
   volatile VALUE type = INT2NUM(paramdef.type);
   volatile VALUE name = rb_str_new2(paramdef.name);
   volatile VALUE desc = rb_str_new2(paramdef.description);
-  
+
   return rb_struct_new(sGimpParamDef, type, name, desc, NULL);
 }
 
@@ -394,7 +394,7 @@ GimpParamDefs2rb (GimpParamDef *paramdefs,
                   int          count)
 {
   volatile VALUE rbparamdefs = rb_ary_new();
-  
+
   int i;
   for (i=0; i<count; i++)
     rb_ary_push(rbparamdefs, GimpParamDef2rb(paramdefs[i]));
@@ -405,20 +405,20 @@ GimpParamDefs2rb (GimpParamDef *paramdefs,
 GimpParamDef
 rb2GimpParamDef (VALUE param)
 {
-	if (!rb_obj_is_kind_of(param, sGimpParamDef))
-		rb_raise(rb_eArgError, "Parameters must be of type Gimp::ParamDef");
-	
-	VALUE type = rb_struct_aref(param, ID2SYM(id_type));
-	VALUE name = rb_struct_aref(param, ID2SYM(id_name));
-	VALUE dscr = rb_struct_aref(param, ID2SYM(id_dscr));
-	
-	GimpParamDef result;
-	result.type = NUM2INT(type);
-	result.name = StringValuePtr(name);
-	result.description = StringValuePtr(dscr);
-	
-/*	printf("%d %s %s\n", result.type, result.name, result.description); //PRINTF*/
-	return result;
+    if (!rb_obj_is_kind_of(param, sGimpParamDef))
+        rb_raise(rb_eArgError, "Parameters must be of type Gimp::ParamDef");
+
+    VALUE type = rb_struct_aref(param, ID2SYM(id_type));
+    VALUE name = rb_struct_aref(param, ID2SYM(id_name));
+    VALUE dscr = rb_struct_aref(param, ID2SYM(id_dscr));
+
+    GimpParamDef result;
+    result.type = NUM2INT(type);
+    result.name = StringValuePtr(name);
+    result.description = StringValuePtr(dscr);
+
+/*  printf("%d %s %s\n", result.type, result.name, result.description); //PRINTF*/
+    return result;
 }
 
 GimpParamDef *
@@ -432,17 +432,17 @@ rb2GimpParamDefs (VALUE rbparamdefs,
     }
   else
     {
-    	Check_Type(rbparamdefs, T_ARRAY);
-  	
+        Check_Type(rbparamdefs, T_ARRAY);
+
       int num = RARRAY(rbparamdefs)->len;
       VALUE *arr = RARRAY(rbparamdefs)->ptr;
-    
+
       GimpParamDef *gimpparamdefs = g_new(GimpParamDef, num);
-    
+
       int i;
       for(i=0; i<num; i++)
         gimpparamdefs[i] = rb2GimpParamDef(arr[i]);
-      
+
       *count = (gint)num;
       return gimpparamdefs;
     }
@@ -461,7 +461,7 @@ rb2GimpRGBPtr (VALUE color)
 {
   if (!rb_obj_is_kind_of(color, cGimpRGB))
    rb_raise(rb_eTypeError, "Object %s is not a Gimp::RGB", StringValuePtr(color));
-  
+
   GimpRGB *tmp;
   Data_Get_Struct(color, GimpRGB, tmp);
   return tmp;
@@ -486,7 +486,7 @@ rb2GimpHSVPtr (VALUE color)
 {
   if (!rb_obj_is_kind_of(color, cGimpHSV))
    rb_raise(rb_eTypeError, "Object %s is not a Gimp::HSV", StringValuePtr(color));
-  
+
   GimpHSV *tmp;
   Data_Get_Struct(color, GimpHSV, tmp);
   return tmp;
@@ -529,7 +529,7 @@ GimpParasite2rb (GimpParasite leech)
   volatile VALUE name = rb_str_new2(leech.name);
   volatile VALUE flags = UINT2NUM(leech.flags);
   volatile VALUE data = rb_str_new(leech.data, leech.size);
-  
+
   return rb_struct_new(sGimpParasite, name, flags, data, NULL);
 }
 
@@ -537,19 +537,18 @@ GimpParasite
 rb2GimpParasite (VALUE leech)
 {
   GimpParasite result;
-  
-  
+
+
   VALUE rbname = rb_struct_aref(leech, ID2SYM(id_name));
   result.name = g_strdup(StringValuePtr(rbname));
-  
+
   result.flags = NUM2UINT(rb_struct_aref(leech, ID2SYM(id_flags)));
 
   VALUE rbdata = rb_struct_aref(leech, ID2SYM(id_data));
   Check_Type(rbdata, T_STRING);
-  
+
   result.size = RSTRING(rbdata)->len;
   result.data = g_memdup(RSTRING(rbdata)->ptr, result.size);
-  
+
   return result;
 }
-  
